--- a/style.scss
+++ b/style.scss
@@ -53,15 +53,23 @@ h1 {
 
 h2 {
   font-size: 24px;
+  a {
+    color: inherit;
+  }
 }
 
 h3 {
   font-size: 20px;
+  a {
+    color: inherit;
+  }
 }
 
 h4 {
   font-size: 18px;
-  color: $gray;
+  a {
+    color: inherit;
+  }
 }
 
 p {
