Added a Mastodon link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,7 @@
       <div class="container">
         <footer class="footer">
           {% include svg-icons.html %}
+        <br><a rel="me" href="https://mastodon.mit.edu/@chris">Mastodon</a>
         </footer>
       </div>
     </div>
